add profiler charts

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,12 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/api'
 
+# websocket 地址
+VUE_APP_WEB_SOCKET_API = 'ws://localhost:9521/arthas_request'
+
+# arthas报告域名
+VUE_APP_ARTHAS_OUTPUT_API = 'http://localhost:9521'
+
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
 # It only does one thing by converting all import() to require().
