--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ ENV = 'development'
 VUE_APP_BASE_API = '/api'
 
 # websocket 地址
-VUE_APP_WEB_SOCKET_API = 'ws://localhost:9521/arthas_request'
+VUE_APP_WEB_SOCKET_API = 'ws://10.8.25.190:9521/arthas_request'
 
 # arthas报告域名
 VUE_APP_ARTHAS_OUTPUT_API = 'http://localhost:9521'
